syntax = "proto3";

package ibc.applications.gmp.v1;

option go_package = "github.com/cosmos/ibc-go/v10/modules/apps/27-gmp/types";

import "cosmos_proto/cosmos.proto";

// AccountIdentifier is used to identify a ICS27 account.
message AccountIdentifier {
  // The (local) client identifier
  string client_id = 1;
  // The sender of the packet
  string sender = 2;
  // The salt of the packet
  bytes salt = 3;
}

// An ICS27Account is defined as a BaseAccount & the account identifier
message ICS27Account {
  string            address    = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  AccountIdentifier account_id = 2;
}
